<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="24dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/user_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:padding="3dp"
                />
            <TextView
                android:id="@+id/user_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:padding="3dp"
                />
        </LinearLayout>
            <TextView
                android:id="@+id/poly_id_intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fpu_id"
                android:padding="6dp"
                />

        <Button
            android:id="@+id/note_create_button"
            android:text="@string/note_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>